--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@turf/turf": "^6.5.0",
     "mapbox-gl": "^2.8.2",
     "moment": "^2.29.3",
     "react": "17.0.2",
